# drone-tracking

./: .gitignore  README.md
control/: CMakeLists.txt  README.md  build.sh
control/include/: chase_config.hpp  crsf.hpp  msp.hpp  pid.hpp  servo_pwm.hpp  uart.hpp
control/src/: chase_config.cpp  chase_main.cpp  crsf.cpp  msp.cpp  osd_overlay_main.cpp  servo_pwm.cpp  uart.cpp
deploy/: README.md  build_all.sh  ch8_engage_track.py  chase.json  drone-tracking.service  msp_betaflight.py  rtsp_shm_writer.py  run_openipc_lighttrack.sh  start_tracking.sh  stats_web.py  sync_to_opi.py
deploy/opi5/: FORENSICS.md  WIRING.md  find_pwmchip.sh  install_overlays.sh  interceptor-uart-pwm.dts
fpv4win/: config.ini  drone.key
fpv4win/qml/Qt/labs/calendar/: DayOfWeekRow.qmlc  MonthGrid.qmlc  WeekNumberColumn.qmlc
fpv4win/qml/QtGraphicalEffects/private/: DropShadowBase.qmlc  FastGlow.qmlc  FastInnerShadow.qmlc  FastMaskedBlur.qmlc  GaussianDirectionalBlur.qmlc  GaussianGlow.qmlc  GaussianInnerShadow.qmlc  GaussianMaskedBlur.qmlc
fpv4win/qml/QtQuick/Controls/: ApplicationWindow.qmlc  BusyIndicator.qmlc  Button.qmlc  Calendar.qmlc  CheckBox.qmlc  ComboBox.qmlc  GroupBox.qmlc  Label.qmlc  Menu.qmlc  MenuBar.qmlc  ProgressBar.qmlc  RadioButton.qmlc  ScrollView.qmlc  Slider.qmlc  SpinBox.qmlc  SplitView.qmlc  StackView.qmlc  StackViewDelegate.qmlc  StackViewTransition.qmlc  StatusBar.qmlc  Switch.qmlc  Tab.qmlc  TabView.qmlc  TableView.qmlc  TableViewColumn.qmlc  TextArea.qmlc  TextField.qmlc  ToolBar.qmlc  ToolButton.qmlc  TreeView.qmlc
fpv4win/qml/QtQuick/Controls/Private/: AbstractCheckable.qmlc  BasicButton.qmlc  BasicTableView.qmlc  CalendarHeaderModel.qmlc  CalendarUtils.jsc  ColumnMenuContent.qmlc  ContentItem.qmlc  Control.qmlc  EditMenu.qmlc  EditMenu_base.qmlc  FastGlow.qmlc  FocusFrame.qmlc  HoverButton.qmlc  MenuContentItem.qmlc  MenuContentScroller.qmlc  MenuItemSubControls.qmlc  ModalPopupBehavior.qmlc  ScrollBar.qmlc  ScrollViewHelper.qmlc  SourceProxy.qmlc  StackView.jsc  StackViewSlideDelegate.qmlc  Style.qmlc  SystemPaletteSingleton.qmlc  TabBar.qmlc  TableViewItemDelegateLoader.qmlc  TableViewSelection.qmlc  TextHandle.qmlc  TextInputWithHandles.qmlc  TextSingleton.qmlc  ToolMenuButton.qmlc  TreeViewItemDelegateLoader.qmlc  style.jsc
fpv4win/qml/QtQuick/Controls/Styles/Base/: ApplicationWindowStyle.qmlc  (+37 more)
fpv4win/qml/QtQuick/Dialogs/: DefaultColorDialog.qmlc  DefaultDialogWrapper.qmlc  DefaultFileDialog.qmlc  DefaultFontDialog.qmlc  DefaultMessageDialog.qmlc  WidgetColorDialog.qmlc  WidgetFileDialog.qmlc  WidgetFontDialog.qmlc  WidgetMessageDialog.qmlc
fpv4win/qml/QtQuick/Dialogs/qml/: ColorSlider.qmlc  DefaultWindowDecoration.qmlc  IconButtonStyle.qmlc  IconGlyph.qmlc
fpv4win/qml/QtQuick/Extras/: CircularGauge.qmlc  DelayButton.qmlc  Dial.qmlc  Gauge.qmlc  PieMenu.qmlc  StatusIndicator.qmlc  ToggleButton.qmlc  Tumbler.qmlc  TumblerColumn.qmlc
fpv4win/qml/QtQuick/Extras/Private/: CircularButton.qmlc  CircularButtonStyleHelper.qmlc  CircularTickmarkLabel.qmlc  Handle.qmlc  PieMenuIcon.qmlc  TextSingleton.qmlc
fpv4win/qml/QtQuick/Extras/designer/: CircularGaugeSpecifics.qmlc  DelayButtonSpecifics.qmlc  DialSpecifics.qmlc  GaugeSpecifics.qmlc  PictureSpecifics.qmlc  PieMenuSpecifics.qmlc  StatusIndicatorSpecifics.qmlc  ToggleButtonSpecifics.qmlc
fpv4win/sdp/: sdp.sdp
fpv_keys/: WINDOWS_FPV_SETUP.md
orchestrator/: CMakeLists.txt  README.md  build.sh  camera_orchestrator.cpp  camera_orchestrator.hpp  main.cpp
reference/rpi_interceptor/: README.md
reference/rpi_interceptor/boot/: cmdline.txt  config.txt
reference/rpi_interceptor/crypto/: KEY_DERIVATION.txt  fscrypt.key  fscrypt.keyfile  rpi_serial.txt  unlock
reference/rpi_interceptor/docs/: FORENSICS_REPORT.md
reference/rpi_interceptor/flight/: app  config.ini  start.sh
reference/rpi_interceptor/network/: swc.nmconnection
reference/rpi_interceptor/systemd/: unlock.service
tools/: cleanup_orangepi_wfb.py  cleanup_orangepi_wfb.sh
tracking/: CMakeLists.txt  README.md  build.sh
tracking/include/: cf_ensemble_tracker.hpp  itracker.hpp  lighttrack.hpp  nanotrack.hpp  nanotrack_onnx.hpp  opencv_legacy_tracker.hpp  opencv_modern_tracker.hpp  tctrack_lite.hpp
tracking/src/: cf_ensemble_tracker.cpp  lighttrack.cpp  lighttrack_main.cpp  main.cpp  multitrack_main.cpp  nanotrack.cpp  nanotrack_onnx.cpp  opencv_legacy_tracker.cpp  opencv_modern_tracker.cpp  tracker_factory.cpp
(+25 files in other folders)
